# linkchecker-markdown

./: .pre-commit-hooks.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  linkcheck.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  cronjobs.yml  pushes.yml
examples/: pre-commit
linkcheckmd/: __init__.py  base.py  coro.py  sync.py
linkcheckmd/tests/: test_script.py
src/linkcheckmd/: __init__.py  __main__.py  base.py  coro.py  files.py  sync.py
src/linkcheckmd/tests/: __init__.py  badlink.md  test_script.py
tests/: badlink.md  test_script.py
