[metadata]
name = linkcheckmd
version = 0.8.1
author = Michael Hirsch, Ph.D.
url = https://github.com/scivision/linkchecker-markdown
description = Check links for Markdown-based site
keywords =
  markdown
  jekyll
  hugo
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Framework :: AsyncIO
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  Operating System :: OS Independent
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: CPython
  Topic :: System :: Networking
  Topic :: Utilities
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  requests
  aiohttp
  aiohttp-requests

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
  linkcheckMarkdown = linkcheck:main


[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

