[metadata]
name = linkcheckmd
version = 1.4.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/linkchecker-markdown
description = Check links for Markdown-based site
keywords =
  markdown
  jekyll
  hugo
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Framework :: AsyncIO
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
install_requires =
  aiohttp >= 3.3
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
requests =
  requests

[options.entry_points]
console_scripts =
  linkcheckMarkdown = linkcheckmd.__main__:main
